Adicionei uma palavra na View Home

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1">System Wine</h1>
                                     <div class="animation animated-item-2">
-                                        Encontre a melhor opção aqui
+                                        Encontre a melhor opção aqui no site
                                     </div>
                                     <a class="btn-slide animation animated-item-3" asp-controller="Login" asp-action="Index">Login</a>
                                     <a class="btn-slide animation animated-item-3" asp-controller="Registro" asp-action="Index">Registre-se</a>
