--- a/Views/Registro/Index.cshtml
+++ b/Views/Registro/Index.cshtml
@@ -26,7 +26,7 @@
          <div class="modal-body">
             <div class="col">
             <label class="control-label" for="date">Data de nascimento</label>
-        <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="text"/>
+        <input class="form-control" id="date" name="date" placeholder="MM/DD/YYYY" type="text"/>
                 <small id="emailHelp" class="form-text text-muted">Coloque a sua data de nascimento</small>
                 </div>
         </div>
