--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -93,6 +93,9 @@
                         <li><a asp-controller="Contatos" asp-action="Index">Contatos</a></li>
                     </ul>
                 </div>
+                <div class="collapse navbar-collapse navbar-right">
+                 <partial name="_LoginPartial" />
+                </div>
             </div><!--/.container-->
         </nav><!--/nav-->
         
