--- a/Areas/Identity/Data/Pages/Account/_ViewImports.cshtml
+++ b/Areas/Identity/Data/Pages/Account/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using telas.Areas.Identity
+@using frontend.Areas.Identity
 @using Microsoft.AspNetCore.Identity
-@namespace telas.Areas.Identity.Pages
+@namespace frontend.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
