Projeto novo atualizado

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -213,6 +213,7 @@
     <script src="~/js/owl.carousel.min.js"></script>
     <script src="~/js/jquery.isotope.min.js"></script>
     <script src="~/js/main.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 
 </html>
