--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -20,7 +24,11 @@
                                     <div class="animation animated-item-2">
                                         Encontre a melhor opção aqui no site
                                     </div>
-                                    <a class="btn-slide animation animated-item-3" asp-controller="Login" asp-action="Index">Login</a>
+                                        @if (!SignInManager.IsSignedIn(User))
+                                            {
+                                            <a class="btn-slide animation animated-item-3" asp-controller="Login" asp-action="Index">Login</a>
+                                            }
+                                    
                                     <a class="btn-slide animation animated-item-3" asp-controller="Registro" asp-action="Index">Registre-se</a>
                                     <!-- <a class="btn-slide animation animated-item-3" href="#">Login</a> -->
                                 </div>
@@ -63,3 +71,4 @@
             <i class="fa fa-chevron-right"></i>
         </a>
     </section>
+
