--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,12 +24,12 @@
                                     <div class="animation animated-item-2">
                                         Encontre a melhor opção aqui no site
                                     </div>
-                                        @if (!SignInManager.IsSignedIn(User))
+                                        <!-- @if (!SignInManager.IsSignedIn(User))
                                             {
                                             <a class="btn-slide animation animated-item-3" asp-controller="Login" asp-action="Index">Login</a>
                                             }
                                     
-                                    <a class="btn-slide animation animated-item-3" asp-controller="Registro" asp-action="Index">Registre-se</a>
+                                    <a class="btn-slide animation animated-item-3" asp-controller="Registro" asp-action="Index">Registre-se</a> -->
                                     <!-- <a class="btn-slide animation animated-item-3" href="#">Login</a> -->
                                 </div>
                             </div>
