--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,9 +6,12 @@
 
 <!-- <h1>@ViewData["Title"]</h1> -->
 
-<div class="modal-body">
 <div class="row">
-    <div class="col-md-4">
+    <div class="col">
+        <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+        <div class="modal-body">
         </br>
         <h1 class="modal-title">Registro</h1>
         </br>
@@ -34,9 +37,12 @@
             <div class="modal-footer">
             <button type="submit" class="btn btn-primary">Registrar</button>
             </div>
+            </div>
+            </div>
+            </div>
+            </div>
         </form>
     </div>
-</div>
 </div>
 
 @section Scripts {
