--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -34,6 +34,10 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            </br>
+            </br>
+            <h4>Preferências</h4>
+            <hr />
             <div class="modal-footer">
             <button type="submit" class="btn btn-primary">Registrar</button>
             </div>
