--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
     <li class="dropdown">  
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Vinhos  <i class="fa fa-angle-down"></i></a>
         <ul class="dropdown-menu">
-            <li><a href="blog-item.html">Tipos</a></li>
+            <li><a asp-controller="Tipos" asp-action="Index">Tipos</a></li>
                                 <li><a href="#">Ocasião</a></li>
                                 <li><a href="#">Uvas</a></li>
                                 <li><a href="#">Países</a></li>
