--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
                                     <h1 class="animation animated-item-1">Quem somos</h1> 
                                     <div class="animation animated-item-2">
                                         Somos conhecidas mundialmente pelo melhor Sistema de Recomendação de vinhos.<br/>
-                                        Nosso objetivo é facilitar as suas decisões na hora de escolher um bom vinho.
+                                        Nosso objetivo é facilitar as suas decisões na hora de escolher um bom vinho
                                     </div>
                                     <a class="btn-slide white animation animated-item-3" href="#">Saiba mais</a>
                                     <!-- <a class="btn-slide animation animated-item-3" href="#">Get Started</a> -->
