--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -38,6 +38,14 @@
             </br>
             <h4>Preferências</h4>
             <hr />
+            <div class="form-group">
+                <select class="form-control">
+                    <option>Tinto</option>
+                    <option>Branco</option>
+                    <option>Rosé</option>
+                    <option>Fortificado</option>
+                </select>
+            </div>
             <div class="modal-footer">
             <button type="submit" class="btn btn-primary">Registrar</button>
             </div>
