--- a/Views/Tipos/Index.cshtml
+++ b/Views/Tipos/Index.cshtml
@@ -11,11 +11,8 @@
 }
 <h2 class="text-center">@ViewData["Title"]</h2> -->
 </br>
-</br>
-
-
+<h2 class="center">Tipos de Vinhos</h2>
 <div class="row">
-          
           <div class="col-lg-4 mb-5 col-md-6">
 
             <div class="wine_v_1 text-center pb-4">
@@ -52,16 +49,16 @@
               <div>
                 <h3 class="heading mb-1"><a href="#">Vila Dourada</a></h3>
                 <div class="rate">
-                  <input type="radio" id="star5" name="rate" value="5" />
-                  <label for="star5" title="text">5 stars</label>
-                  <input type="radio" id="star4" name="rate" value="4" />
-                  <label for="star4" title="text">4 stars</label>
-                  <input type="radio" id="star3" name="rate" value="3" />
-                  <label for="star3" title="text">3 stars</label>
-                  <input type="radio" id="star2" name="rate" value="2" />
-                  <label for="star2" title="text">2 stars</label>
-                  <input type="radio" id="star1" name="rate" value="1" />
-                  <label for="star1" title="text">1 star</label>
+                  <input type="radio" id="star6" name="rate" value="5" />
+                  <label for="star6" title="text">5 stars</label>
+                  <input type="radio" id="star7" name="rate" value="4" />
+                  <label for="star7" title="text">4 stars</label>
+                  <input type="radio" id="star8" name="rate" value="3" />
+                  <label for="star8" title="text">3 stars</label>
+                  <input type="radio" id="star9" name="rate" value="2" />
+                  <label for="star9" title="text">2 stars</label>
+                  <input type="radio" id="star10" name="rate" value="1" />
+                  <label for="star10" title="text">1 star</label>
                 </div>
               </div>
               
