--- a/Views/Tipos/Index.cshtml
+++ b/Views/Tipos/Index.cshtml
@@ -11,6 +11,24 @@
 }
 <h2 class="text-center">@ViewData["Title"]</h2> -->
 </br>
+<div class="container">
+  <h2>Filterable Dropdown</h2>
+  <p>Open the dropdown menu and type something in the input field to search for dropdown items:</p>
+  <p>Note that we have styled the input field to fit the dropdown items.</p>
+  <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <input class="form-control" id="myInput" type="text" placeholder="Search..">
+      <li><a href="#">HTML</a></li>
+      <li><a href="#">CSS</a></li>
+      <li><a href="#">JavaScript</a></li>
+      <li><a href="#">jQuery</a></li>
+      <li><a href="#">Bootstrap</a></li>
+      <li><a href="#">Angular</a></li>
+    </ul>
+  </div>
+</div>
 <h2 class="center">Tipos de Vinhos</h2>
 <div class="row">
           <div class="col-lg-4 mb-5 col-md-6">
